# Ponderadas_M6

./: README.md
doc/: autonomus_navigation.md
src/ponderada_s1/: package.xml  setup.cfg  setup.py
src/ponderada_s1/ponderada_s1/: ponderada_s1.py
src/reactive_navigation/: CMakeLists.txt  package.xml
src/reactive_navigation/include/reactive_navigation/: reactive_navigation.cpp
src/turtlebot_teleoperado/: package.xml  setup.cfg  setup.py
src/turtlebot_teleoperado/turtlebot_teleoperado/: turtlebot_teleoperado.py
